--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-toastify": "^4.1.0",
     "ajv-keywords": "^3.5.2",
     "core-js": "^3.37.1",
     "core-js-pure": "^3.37.1",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.77.4",
     "typescript": "^4.9.5",
